stock アプリの model, view, form 等を追加。 ただし、 api リクエスト系は未実装。

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             <a href="{% url 'metal:index' %}" id="django-metal" class="company-link metal">Django貴金属株式会社</a><br>
         </div>
         <div class="company-info">
-            <a href="#" id="django-stock" class="company-link stock">Django証券株式会社</a>
+            <a href="{% url 'stock:index' %}" id="django-stock" class="company-link stock">Django証券株式会社</a>
         </div>
     </div>
 </section>
