販売履歴ページを追加。

--- a/templates/metal/index.html
+++ b/templates/metal/index.html
@@ -63,6 +63,7 @@
   </ul>
   <p>
     <a href="{% url 'metal:buy' %}">貴金属を売る</a><br>
+    <a href="{% url 'metal:purchase_list' %}">貴金属売買履歴</a><br>
     <a href="#">貴金属を買う(販売は休止しています)</a><br>
     <a href="{% url 'main:index' %}">トップに戻る</a><br>
   </p>
