--- a/templates/stock/index.html
+++ b/templates/stock/index.html
@@ -74,6 +74,7 @@
     </ul>
     <p class="links">
         <a href="/stock/buy/">株券を売る</a><br>
+        <a href="{% url 'stock:purchase_list' %}">株券売買履歴</a><br>
         <a href="#">株券を買う(販売は休止しています)</a><br>
         <a href="/">トップに戻る</a><br/>
     </p>
